@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tk.h,v 1.74.2.19 2007/05/30 17:34:45 dgp Exp $
+ * RCS: @(#) $Id: tk.h,v 1.74.2.20 2007/10/02 17:55:53 dgp Exp $
  */
 
 #ifndef _TK
@@ -53,10 +53,10 @@ extern "C" {
 #define TK_MAJOR_VERSION   8
 #define TK_MINOR_VERSION   4
 #define TK_RELEASE_LEVEL   TCL_FINAL_RELEASE
-#define TK_RELEASE_SERIAL  16
+#define TK_RELEASE_SERIAL  17
 
 #define TK_VERSION	"8.4"
-#define TK_PATCH_LEVEL	"8.4.16"
+#define TK_PATCH_LEVEL	"8.4.17"
 
 /* 
  * A special definition used to allow this header file to be included
